WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273585
[WebGPU] Queue should not allow command buffer to be committed twice
https://bugs.webkit.org/show_bug.cgi?id=273585
Summary
[WebGPU] Queue should not allow command buffer to be committed twice
Mike Wyrzykowski
Reported
2024-05-01 15:46:31 PDT
[WebGPU] Queue should not allow command buffer to be committed twice
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-05-01 15:46:48 PDT
radar://127364831
Mike Wyrzykowski
Comment 2
2024-05-01 15:53:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28015
EWS
Comment 3
2024-05-03 20:21:30 PDT
Committed
278362@main
(1aa9df849f39): <
https://commits.webkit.org/278362@main
> Reviewed commits have been landed. Closing PR #28015 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug