[WebGPU] Queue should not allow command buffer to be committed twice https://bugs.webkit.org/show_bug.cgi?id=273585 <radar://127364831>

Reviewed by Cameron McCormack.

Check the command buffer status during validation to ensure
addCompleted / scheduled handler doesn't occur after commit.

* LayoutTests/TestExpectations:
* LayoutTests/fast/webgpu/fuzz-273585-expected.txt: Added.
* LayoutTests/fast/webgpu/fuzz-273585.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::errorValidatingSubmit const):

Canonical link: https://commits.webkit.org/278362@main